--- a/TP1/.vscode/tasks.json
+++ b/TP1/.vscode/tasks.json
@@ -7,6 +7,7 @@
             "args": [
                 "-fdiagnostics-color=always",
                 "-g",
+                "-pthread",
                 "spend_time.c",
                 "ep1_main.c",
                 "-lm",
