--- a/TP1/.vscode/tasks.json
+++ b/TP1/.vscode/tasks.json
@@ -11,6 +11,8 @@
                 "spend_time.c",
                 "ep1_main.c",
                 "-lm",
+                "-o",
+                "${fileDirname}/${fileBasenameNoExtension}"
             ],
             "options": {
                 "cwd": "${fileDirname}"
