--- a/TP2/Makefile
+++ b/TP2/Makefile
@@ -1,30 +1,17 @@
-# Defina os nomes dos programas
-CLIENT_PARES = client
-SERV_PARES = server
-SERV_CENTRAL = central_server
-CLIENT_CENTRAL = central_client
-
-# Defina as portas padrão
-PORT_SERV_PARES = 5555
-PORT_SERV_CENTRAL = 6666
-
-# Regras
-all: $(CLIENT_PARES) $(SERV_PARES) $(SERV_CENTRAL) $(CLIENT_CENTRAL)
+all:
+	python3 -m grpc_tools.protoc  -I. --python_out=. --grpc_python_out=. storage.proto 
+	python3 -m grpc_tools.protoc  -I. --python_out=. --grpc_python_out=. centralizer.proto 
 
 clean:
-    rm -f $(CLIENT_PARES) $(SERV_PARES) $(SERV_CENTRAL) $(CLIENT_CENTRAL)
-
-run_cli_pares:
-    ./$(CLIENT_PARES) $(arg)
+	rm *_pb2*.py
 
 run_serv_pares_1:
-    ./$(SERV_PARES) $(PORT_SERV_PARES)
-
+	python3 server.py ${arg}
 run_serv_pares_2:
-    ./$(SERV_PARES) $(PORT_SERV_PARES) qqcoisa
-
-run_serv_central:
-    ./$(SERV_CENTRAL) $(PORT_SERV_CENTRAL)
-
+	python3 server.py ${arg} flag
+run_cli_pares:
+	python3 client.py ${arg}
 run_cli_central:
-    ./$(CLIENT_CENTRAL) $(arg)
+	python3 central_client.py ${arg}
+run_serv_central:
+	python3 central_server.py ${arg}
